Fixed logo cut off issue

--- a/mainsite/css/style.css
+++ b/mainsite/css/style.css
@@ -76,7 +76,7 @@ header .title{
 		text-indent: -2345px;
 		float: left;
 		min-height: 100px;
-		padding: 30px 0;
+		padding: 4% 0;
 		background: url('../img/logodull.png') center no-repeat;
 		background-size: 100%;
 	}
